[package]
name = "bitget-rs"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "Bitget SDK, A wrapper for the Bitget API."
keywords = ["trade", "crypto", "bitget", "dex", "finance"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/trade-sdk/tree/main/bitget-sdk"

[dependencies]
